// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backdrop with children should render when not shown 1`] = `<Fragment />`;

exports[`Backdrop with children should render when shown 1`] = `
<Fragment>
  <styled.div>
    <Component />
  </styled.div>
</Fragment>
`;

exports[`Backdrop without children should render when not shown 1`] = `<Fragment />`;

exports[`Backdrop without children should render when shown 1`] = `
<Fragment>
  <styled.div />
</Fragment>
`;
